Only disallow control characters for text input

This now allows to insert e.g. zero-width joiner and zero-width
non-joiner characters, which are needed for arabic/persian input

BUG: 456498